# FC01D

./: CMakeLists.txt  Kconfig  README.md  build.bat  build.sh  quec_bk_7231n.cmake  quec_bk_7231n.code-workspace
ql_application/: CMakeLists.txt  Kconfig  ql_app.c  quectel_demo_config.h
ql_application/quectel_demo/: CMakeLists.txt  ql_api_common.h  ql_ble_ams_ancs_demo.c  ql_ble_config_network_demo.c  ql_ble_demo.c  ql_ble_multi_service_demo.c  ql_ble_pair_demo.c  ql_customer_cli.c  ql_ftp_demo_c.c  ql_http_demo.c  ql_lowpower_demo.c  ql_mqtt_demo.c  ql_osi_demo.c  ql_pwm_demo.c  ql_spi_demo.c  ql_spi_flash_demo.c  ql_timer_demo.c  ql_tls_demo.c  ql_uart_demo.c  ql_uart_ymodem_upgrade_demo.c  ql_watchdog_demo.c  ql_wlan_demo.c
ql_application/quectel_demo/5500/: wizchip_ethnetif.c  wizchip_ethnetif.h
ql_application/quectel_demo/tcp_server/: mongoose.c  tcp_websocket_server.c
ql_build/: bk7231n_bsp.lds  defconfig
ql_components/: CMakeLists.txt
ql_components/bk_func/airkiss/: airkiss_main.h
ql_components/bk_func/include/: bk7011_cal_pub.h  mcu_ps_pub.h  power_save_pub.h  rw_pub.h  wlan_ui_pub.h
ql_components/bk_func/user_driver/: BkDriverFlash.h
ql_components/bk_func/wolfssl/wolfssl/wolfcrypt/: wc_port.h
ql_components/bk_func/wpa_supplicant_2_9/src/common/: wpa_ctrl.h
ql_components/bk_func/wpa_supplicant_2_9/src/drivers/: driver_beken.h
ql_components/bk_func/wpa_supplicant_2_9/src/utils/: build_config.h
ql_components/bk_func/wpa_supplicant_2_9/wpa_supplicant/: blacklist.h
ql_components/cjson/: CMakeLists.txt
ql_components/curl/: CMakeLists.txt
ql_components/curl/include/curl/: curl.h  curlver.h  quectel_curl_io.h  system.h
ql_components/curl/src/: .gitignore  Makefile.m32  asyn-thread.c  checksrc.pl  connect.c  curl_addrinfo.c  curl_addrinfo.h  curl_config.h  curl_config.h.cmake  curl_ntlm_wb.c  curl_sasl.c  curl_setup.h  easyoptions.c  ftp.c  hostip.h  hostip6.c  multi.c  quectel_curl_io.c  quic.h  sendf.c  setopt.c  socketpair.c  strerror.c  timeval.c  transfer.c  url.c  url.h  urlapi.c  urldata.h
ql_components/curl/src/vauth/: cleartext.c  cram.c  digest.c  digest_sspi.c  krb5_gssapi.c  krb5_sspi.c  ntlm.c  ntlm_sspi.c  oauth2.c  spnego_gssapi.c  spnego_sspi.c  vauth.c
ql_components/curl/src/vquic/: ngtcp2.c  ngtcp2.h  quiche.c  quiche.h  vquic.c  vquic.h
ql_components/curl/src/vssh/: libssh.c  libssh2.c  ssh.h  wolfssh.c
ql_components/curl/src/vtls/: bearssl.c  bearssl.h  gskit.c  gskit.h  gtls.c  gtls.h  keylog.c  keylog.h  mbedtls.c  mbedtls.h  mbedtls_threadlock.c  mbedtls_threadlock.h  mesalink.c  mesalink.h  nss.c  nssg.h  openssl.c  openssl.h  schannel.c  schannel.h  schannel_verify.c  sectransp.c  sectransp.h  vtls.c  vtls.h  wolfssl.c  wolfssl.h
ql_components/lwip_intf/: CMakeLists.txt
ql_components/lwip_intf/lwip-2.0.2/port/: ethernetif.c  net.c  sys_arch.c
ql_components/lwip_intf/lwip-2.0.2/src/api/: sockets.c
ql_components/lwip_intf/lwip-2.0.2/src/apps/httpd/: custom_fsdata.c  fs.c  fsdata.c
ql_components/lwip_intf/lwip-2.0.2/src/apps/httpd/fs/: connect_succes.html  not_connect.html
ql_components/lwip_intf/lwip-2.0.2/src/apps/ping/: ping.c
ql_components/lwip_intf/lwip-2.0.2/src/core/: netif.c
ql_components/lwip_intf/lwip-2.0.2/src/core/ipv4/: etharp.c
ql_components/lwip_intf/lwip-2.0.2/src/netif/: ethernet.c
ql_components/mbedtls/: CMakeLists.txt
ql_components/mbedtls/mbedtls-port/inc/: esp_mbedtls_dynamic_impl.h  tls_certificate.h  tls_client.h  tls_config.h
ql_components/mbedtls/mbedtls-port/src/: esp_mbedtls_dynamic_impl.c  esp_ssl_cli.c  esp_ssl_srv.c  esp_ssl_tls.c  tls_certificate.c  tls_client.c
ql_components/paho-mqtt/: CMakeLists.txt
ql_components/paho-mqtt/client/: paho_mqtt_udp.c
ql_components/paho-mqtt/mqtt_ui/: mqtt_client_core.c  mqtt_client_core.h
ql_components/paho-mqtt/mqtt_ui/ssl_mqtt/: ssl_mqtt_client_port.c  ssl_mqtt_client_port.h
ql_components/qadpt/include/: ql_api_osi.h  ql_ble.h  ql_flash.h  ql_ftp_client_c.h  ql_https.h  ql_include.h  ql_spi.h  ql_uart.h  ql_version.h  ql_wlan.h
ql_kernel/app/config/: sys_config_bk7231n.h
ql_kernel/app/http/: utils_net.h
ql_kernel/common/: typedef.h
ql_kernel/driver/ble_5_x_rw/ble_pub/ui/: ble_ui.h
ql_kernel/driver/i2c/: i2c_pub.h
ql_kernel/driver/include/: ble_api_5_x.h  saradc_pub.h
ql_kernel/driver/uart/: uart.h
ql_kernel/ip/lmac/src/mm/: mm.h
ql_kernel/ip/lmac/src/rwnx/: rwnx_config.h
ql_kernel/ip/lmac/src/td/: td.h
ql_kernel/ip/umac/src/scanu/: scanu_task.h
ql_kernel/ip/umac/src/sm/: sm.h  sm_task.h
ql_kernel/ip/umac/src/txu/: txu_cntrl.h
ql_tools/: codesize.py
ql_tools/beken_packager/: ocpu_bk_packager.py
ql_tools/cmake-3.28.0-rc3-windows-x86_64/doc/cmake/html/: genindex.html  index.html  search.html  searchindex.js
ql_tools/cmake-3.28.0-rc3-windows-x86_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
ql_tools/cmake-3.28.0-rc3-windows-x86_64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
ql_tools/cmake-3.28.0-rc3-windows-x86_64/share/cmake-3.28/Modules/: CMakeDetermineCUDACompiler.cmake  CMakeParseImplicitLinkInfo.cmake  CheckLanguage.cmake  ExternalProject.cmake  FetchContent.cmake  FindCUDAToolkit.cmake  FindFreetype.cmake  FindMatlab.cmake  FindOpenMP.cmake  FindProtobuf.cmake  FindTIFF.cmake  UsePkgConfig.cmake
ql_tools/kconfig_tool/: .config  kconfig-conf  kconfig-mconf
ql_tools/winlibs-x86_64-posix-seh-gcc-13.2.0-mingw-w64msvcrt-11.0.1-r2/mingw64/: version_info.txt
ql_tools/winlibs-x86_64-posix-seh-gcc-13.2.0-mingw-w64msvcrt-11.0.1-r2/mingw64/include/: libyasm-stdint.h
ql_tools/winlibs-x86_64-posix-seh-gcc-13.2.0-mingw-w64msvcrt-11.0.1-r2/mingw64/lib/python3.9/: _sysconfigdata__win32_.py
(+2120 files in other folders)
