
list(APPEND lwip_includes
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_application
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_application/quectel_demo
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/curl/include
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/curl/include/curl
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/mbedtls/mbedtls/include
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/mbedtls/mbedtls/include/mbedtls
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/mbedtls/mbedtls-port/inc
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/mbedtls/mbedtls_ui
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/mbedtls/mbedtls_ui
	${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/arch
	${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/port
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/include/lwip
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/include/posix
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/include/netif
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/include
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/dhcpd
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/bk_func/wolfssl
	${CMAKE_CURRENT_LIST_DIR}/../../ql_components/bk_func/wlan_ui
	${CMAKE_CURRENT_LIST_DIR}/../../ql_components/bk_func/wpa_supplicant_2_9/src
	${CMAKE_CURRENT_LIST_DIR}/../../ql_components/bk_func/wpa_supplicant_2_9/src/utils
	${CMAKE_CURRENT_LIST_DIR}/../../ql_components/bk_func/wpa_supplicant_2_9/hostapd
	${CMAKE_CURRENT_LIST_DIR}/../../ql_components/bk_func/wpa_supplicant_2_9/src/common
	${CMAKE_CURRENT_LIST_DIR}/../../ql_components/bk_func/wpa_supplicant_2_9/bk_patch
	${CMAKE_CURRENT_LIST_DIR}/../../ql_components/bk_func/include
	${CMAKE_CURRENT_LIST_DIR}/../../ql_components/bk_func/rwnx_intf
	${CMAKE_CURRENT_LIST_DIR}/../../ql_components/bk_func/power_save
	${CMAKE_CURRENT_LIST_DIR}/../../ql_components/bk_func/joint_up
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/mac
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/ke
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/umac/src/rxu
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/umac/src/bam
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/umac/src/txu
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/umac/src/llc
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/umac/src/mesh
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/umac/src/mfp
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/umac/src/apm
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/umac/src/sm
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/umac/src/scanu
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/umac/src/me
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/umac/src/rc
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/rwnx
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/bfr
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/vif
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/mm
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/tpc
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/p2p
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/td
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/rx
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/rx/rxl
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/sta
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/ps
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/tx
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/tx/txl
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/rd
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/scan
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/chan
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/hal
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/lmac/src/tdls
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/ip/common
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/os/include
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/os/FreeRTOSv9.0.0
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/os/FreeRTOSv9.0.0/Source/include
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/os/FreeRTOSv9.0.0/Source/portable/Keil/ARM968es
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/app/led
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/app/net_work
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/app
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/app/config
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/include
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/sys_ctrl
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/wdt

    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/rc_beken
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/rw_pub
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/irda
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/intc
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/icu
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/entry
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/macphy_bypass
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/security
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/common/reg
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/common
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/calendar
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/common
	${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/dma
	${CMAKE_CURRENT_LIST_DIR}/../../ql_kernel/driver/phy
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/qadpt/include
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_build
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_application
)

list(APPEND lwip_source_file
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/port/ethernetif.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/port/net.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/port/sys_arch.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/api/api_lib.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/api/api_msg.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/api/err.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/api/netbuf.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/api/netdb.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/api/netifapi.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/api/sockets.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/api/tcpip.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/def.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/apps/ping/ping.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/dns.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/inet_chksum.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/init.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ip.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv4/dhcp.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv4/etharp.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv4/icmp.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv4/igmp.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv4/ip4_addr.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv4/ip4.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv4/ip4_frag.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv6/dhcp6.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv6/ethip6.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv6/icmp6.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv6/inet6.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv6/ip6_addr.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv6/ip6.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv6/ip6_frag.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv6/nd6.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/ipv6/mld6.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/mem.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/netif.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/memp.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/pbuf.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/raw.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/stats.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/sys.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/tcp.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/tcp_in.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/tcp_out.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/timeouts.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/core/udp.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/netif/ethernet.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/apps/httpd/httpd.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/lwip-2.0.2/src/apps/httpd/fs.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/dhcpd/dhcp-server.c
    ${CMAKE_CURRENT_LIST_DIR}/../../ql_components/lwip_intf/dhcpd/dhcp-server-main.c
)



include_directories(BEFORE  ${lwip_includes})

add_library(lwip STATIC ${lwip_source_file})


